operator-deploy/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-data-agent-services/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Sas-Ingress-Request "true";
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataAgentContent/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    nginx.ingress.kubernetes.io/use-regex: "true"
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-content
    sas.com/admin: namespace
  name: sas-data-agent-content
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-agent-content
            port:
              number: 80
        path: /dataAgentContent(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-agent-content
            port:
              number: 80
        path: /dataAgentContent(/|$)(.*)
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Sas-Ingress-Request "true";
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /dataAgentManagement/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    nginx.ingress.kubernetes.io/use-regex: "true"
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-management
    sas.com/admin: namespace
  name: sas-data-agent-management
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-data-agent-management
            port:
              number: 80
        path: /dataAgentManagement(/|$)(.*)
        pathType: ImplementationSpecific
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-data-agent-management
            port:
              number: 80
        path: /dataAgentManagement(/|$)(.*)
        pathType: ImplementationSpecific
